<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/linearLayout5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.02"
        android:orientation="vertical" >
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.02"
        android:orientation="vertical" >

        <LinearLayout
            android:id="@+id/linearLayout2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/editText1"
                android:layout_width="137dp"
                android:layout_height="38dp"
                android:text="@string/activityName"
                android:textSize="32px" />

            <EditText
                android:id="@+id/ActivityNameText"
                android:layout_width="154dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.11"
                android:inputType="textPersonName" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <LinearLayout
                android:id="@+id/linearLayout17"
                android:layout_width="wrap_content"
                android:layout_height="match_parent" >

                <TextView
                    android:id="@+id/activityTypeText"
                    android:layout_width="137dp"
                    android:layout_height="wrap_content"
                    android:text="@string/activityType"
                    android:textSize="32px" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/linearLayout9"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="vertical" >

                <LinearLayout
                    android:id="@+id/linearLayout16"
                    android:layout_width="318dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical" >

                    <Spinner
                        android:id="@+id/activityTypeSpinner"
                        android:layout_width="184dp"
                        android:layout_height="wrap_content" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <LinearLayout
                android:id="@+id/linearLayout7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <TextView
                    android:id="@+id/editText3"
                    android:layout_width="136dp"
                    android:layout_height="wrap_content"
                    android:text="@string/Severity"
                    android:textSize="32px" >

                    <requestFocus />
                </TextView>

                <Spinner
                    android:id="@+id/severitySpinner"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout10"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <LinearLayout
                android:id="@+id/linearLayout14"
                android:layout_width="182dp"
                android:layout_height="wrap_content" >
            </LinearLayout>

            <LinearLayout
                android:id="@+id/linearLayout11"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" >

                <LinearLayout
                    android:id="@+id/linearLayout15"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" >

                    <TextView
                        android:id="@+id/editText4"
                        android:layout_width="130dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.14"
                        android:text="@string/agentType"
                        android:textSize="32px" />

                    <Spinner
                        android:id="@+id/agentTypeSpinner"
                        android:layout_width="138dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.79" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/linearLayout12"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <LinearLayout
                    android:id="@+id/linearLayout18"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical" >

                    <TextView
                        android:id="@+id/editText2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                         android:textSize="32px"
                        android:text="@string/description_new" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout13"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="2.38" >

            <LinearLayout
                android:id="@+id/linearLayout19"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="vertical" >
            </LinearLayout>

            <EditText
                android:id="@+id/descriptionText"
                android:layout_width="wrap_content"
                android:layout_height="166dp"
                android:layout_weight="1" />

        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.13"
        android:orientation="vertical" >

        <LinearLayout
            android:id="@+id/linearLayout8"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.25"
            android:orientation="vertical" >

            <Button
                android:id="@+id/submitActivityButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Submit" />

        </LinearLayout>
    </LinearLayout>

</LinearLayout>